[package]
name = "base100"
description = "Encode your data into emoji"
repository = "https://github.com/AdamNiederer/base100"
version = "0.2.0"
authors = ["Adam Niederer <Adam.Niederer@gmail.com>"]
license = "AGPL-3.0"

[dependencies]
clap = {version = "2.19", features = ["yaml"]}

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
panic = "abort"