[package]
name = "base100"
description = "Encode your data into emoji"
repository = "https://github.com/AdamNiederer/base100"
version = "0.4.1"
authors = ["Adam Niederer <Adam.Niederer@gmail.com>"]
license = "AGPL-3.0"

[dependencies]
clap = { version = "2.19", features = ["yaml"] }
stdsimd = { version = "0.0.3", optional = true }
faster = { git = "https://github.com/AdamNiederer/faster", branch = "master", optional = true }

[features]
simd = ["stdsimd", "faster"]

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
panic = "abort"

[profile.dev]
debug = true
debug-assertions = true
panic = "unwind"
codegen-units = 16
